--- a/29.5 Instagram Lite/public/stylesheets/style.css
+++ b/29.5 Instagram Lite/public/stylesheets/style.css
@@ -96,8 +96,8 @@ h4 i, div i, .list-group-item{
 }
 @media(max-width:768px){
   .col-4 img{
-    height: 150px;
-    width: 150px
+    height: 105px;
+    width: 105px;
   }
   
   #search{
